Appearance bug fixes in css, and wrapping the appearance options...

--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -158,6 +158,7 @@
 .menu__item-slider {
     display: inline-block;
     width: 48px;
+    min-width: 48px;
     height: 26px;
     background: #ccc;
     border-radius: 13px;
@@ -177,6 +178,7 @@
     left: 3px;
     top: 3px;
     width: 20px;
+    min-width: 20px;
     height: 20px;
     background: #fff;
     border-radius: 50%;
